--- a/it/index.html
+++ b/it/index.html
@@ -19,7 +19,7 @@ meta_title: Primi passi con Ghost
     <h1>Guida a Ghost</h1>
     <p class="lead">Tutto quello che devi sapere per installare un blog con Ghost.</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Clicca qui per cominciare</a>
+      <a href="{{ site.url }}/{{page.lang}}/get-started/" class="btn btn-success btn-large">Clicca qui per cominciare</a>
     </p>
   </div>
 </div>
