--- a/ja/index.html
+++ b/ja/index.html
@@ -19,7 +19,7 @@ meta_title: Ghost日本語ガイド - Ghostを使ってみよう
     <h1>The Ghost Guide</h1>
     <p class="lead">ブログプラットフォーム「Ghost」の公式日本語ドキュメントです。</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Ghostのインストール方法へ</a>
+      <a href="{{ site.url }}/{{page.lang}}/get-started/" class="btn btn-success btn-large">Ghostのインストール方法へ</a>
     </p>
   </div>
 </div>
