--- a/zh/index.html
+++ b/zh/index.html
@@ -20,7 +20,7 @@ meta_description: Ghost使用完全指南。包括安装、使用以及如何制
     <h1>Ghost使用指南</h1>
     <p class="lead">这里包含了完整的Ghost使用指南中文文档。</p>
     <p>
-      <a href="{{ site.url }}/{% if page.lang %}{{ page.lang }}{% endif %}/installation/" class="btn btn-success btn-large">开始Ghost之旅吧</a>
+      <a href="{{ site.url }}/{% if page.lang %}{{ page.lang }}{% endif %}/get-started/" class="btn btn-success btn-large">开始Ghost之旅吧</a>
     </p>
   </div>
 </div>
