--- a/de/index.html
+++ b/de/index.html
@@ -19,7 +19,7 @@ meta_title: Erste Schritte mit Ghost
     <h1>Das Ghost-Handbuch</h1>
     <p class="lead">Alles, was Du wissen musst, um mit Ghost ein Blog aufzusetzen.</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Klicke hier f&uuml;r die ersten Schritte</a>
+      <a href="{{ site.url }}/{{page.lang}}/get-started/" class="btn btn-success btn-large">Klicke hier f&uuml;r die ersten Schritte</a>
     </p>
   </div>
 </div>
