--- a/fr/index.html
+++ b/fr/index.html
@@ -19,7 +19,7 @@ meta_title: Démarrer avec Ghost
     <h1>Le Guide de Ghost</h1>
     <p class="lead">Tout ce que vous devez savoir pour paramétrer un blog avec Ghost.</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Cliquez ici pour démarrer</a>
+      <a href="{{ site.url }}/{{page.lang}}/get-started/" class="btn btn-success btn-large">Cliquez ici pour démarrer</a>
     </p>
   </div>
 </div>
