--- a/ko/index.html
+++ b/ko/index.html
@@ -19,7 +19,7 @@ meta_title: Getting Started with Ghost
     <h1>The Ghost Guide</h1>
     <p class="lead">Everything you need to know to set up a blog with Ghost.</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Click Here to Get Started</a>
+      <a href="{{ site.url }}/{{page.lang}}/get-started/" class="btn btn-success btn-large">Click Here to Get Started</a>
     </p>
   </div>
 </div>
