First commit of documentation translation in Korean

--- a/ko/index.html
+++ b/ko/index.html
@@ -16,10 +16,10 @@ meta_title: Getting Started with Ghost
 
 <div class="bs-masthead">
   <div class="container">
-    <h1>The Ghost Guide</h1>
-    <p class="lead">Everything you need to know to set up a blog with Ghost.</p>
+    <h1>고스트 가이드</h1>
+    <p class="lead">고스트로 블로그 시작하기의 모든것</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Click Here to Get Started</a>
+      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">시작하기</a>
     </p>
   </div>
 </div>
