--- a/pl/index.html
+++ b/pl/index.html
@@ -1,7 +1,7 @@
 ---
 lang: pl
 layout: default
-meta_title: Getting Started with Ghost
+meta_title: Pierwsze kroki z Ghost
 ---
 
 <div id="fb-root"></div>
@@ -16,10 +16,10 @@ meta_title: Getting Started with Ghost
 
 <div class="bs-masthead">
   <div class="container">
-    <h1>The Ghost Guide</h1>
-    <p class="lead">Everything you need to know to set up a blog with Ghost.</p>
+    <h1>Przewodnik po Ghost</h1>
+    <p class="lead">Wszystko co musisz wiedzieć, aby założyć bloga z Ghost</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Click Here to Get Started</a>
+      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Kliknij tutaj, aby zacząć</a>
     </p>
   </div>
 </div>
