--- a/pt-BR/index.html
+++ b/pt-BR/index.html
@@ -2,6 +2,7 @@
 lang: pt-BR
 layout: default
 meta_title: Iniciando com Ghost
+meta_description: Um guia mais a fundo para usar a plataforma de blog Ghost. Instalação, configuração, utilização, e como desenvolver temas e plugins.
 ---
 
 <div id="fb-root"></div>
@@ -19,7 +20,7 @@ meta_title: Iniciando com Ghost
     <h1>O Guia do Ghost</h1>
     <p class="lead">Tudo o que você precisa saber para configurar seu Blog com o Ghost.</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Clique aqui para começar</a>
+      <a href="{{ site.url }}/{% if page.lang %}{{ page.lang }}{% endif %}/installation/" class="btn btn-success btn-large">Clique aqui para começar</a>
     </p>
   </div>
 </div>
@@ -34,7 +35,7 @@ meta_title: Iniciando com Ghost
         <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=tryghost&repo=ghost&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
       </li>
       <li class="follow-btn">
-        <a href="https://twitter.com/tryghost" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Seguir @TryGhost</a>
+        <a href="https://twitter.com/tryghost" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Siga @TryGhost</a>
       </li>
       <li class="tweet-btn">
         <div class="fb-like" data-href="http://www.facebook.com/TryGhostApp" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
