--- a/pt-BR/usage/index.html
+++ b/pt-BR/usage/index.html
@@ -1,6 +1,6 @@
 ---
 lang: pt-BR
-layout: default
+layout: usage
 meta_title: Como Usar o Ghost - Ghost Docs
 meta_description: Um guia mais a fundo para usar a plataforma de blog Ghost. Escolheu o Ghost mas não sabe por onde começar? Comece aqui!
 heading: Usando o Ghost
