--- a/id_ID/index.html
+++ b/id_ID/index.html
@@ -17,7 +17,7 @@ meta_title: Memulai Ghost
 <div class="bs-masthead">
   <div class="container">
     <h1>Panduan Ghost</h1>
-    <p class="lead">Segala yang perlu Anda ketahui untuk membangun sebuah blog dengan Ghost.</p>
+    <p class="lead">Semua yang perlu Anda ketahui untuk membangun sebuah blog dengan Ghost.</p>
     <p>
       <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Klik Disini untuk Memulai</a>
     </p>
