--- a/pt-BR/index.html
+++ b/pt-BR/index.html
@@ -2,6 +2,7 @@
 lang: pt-BR
 layout: default
 meta_title: Iniciando com Ghost
+meta_description: Um guia mais a fundo para usar a plataforma de blog Ghost. Instalação, configuração, utilização, e como desenvolver temas e plugins.
 ---
 
 <div id="fb-root"></div>
