ko : Fix error in translation

--- a/ko/index.html
+++ b/ko/index.html
@@ -1,7 +1,7 @@
 ---
 lang: ko
 layout: default
-meta_title: Getting Started with Ghost
+meta_title: Ghost 시작하기
 ---
 
 <div id="fb-root"></div>
@@ -19,7 +19,7 @@ meta_title: Getting Started with Ghost
     <h1>Ghost 길잡이</h1>
     <p class="lead">Ghost와 함께 멋진 블로그를 만들어 보세요.</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">사작</a>
+      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">시작</a>
     </p>
   </div>
 </div>
